// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget renders correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiBadge-root css-63ezxx-MuiBadge-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiBox-root css-1ka4bzq-MuiPaper-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiStack-root css-niqf4j-MuiStack-root"
        >
          <div>
            Child Content
          </div>
        </div>
      </div>
      <span
        class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-2ao5rv-MuiBadge-badge"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Widget shows edit icons when in edit mode 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-0"
  >
    <span
      class="MuiBadge-root css-63ezxx-MuiBadge-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiBox-root css-1ka4bzq-MuiPaper-root"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiStack-root css-niqf4j-MuiStack-root"
        >
          <button
            aria-describedby=""
            aria-disabled="false"
            aria-label="Drag and drop to restructure widget layout"
            aria-roledescription="sortable"
            class=""
            color="primary"
            data-mui-internal-clone-element="true"
            data-testid="AIconButton"
            label="[object Object]"
            role="button"
            sx="[object Object]"
            tabindex="0"
          />
          <div>
            Child Content
          </div>
        </div>
      </div>
      <span
        class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-2ao5rv-MuiBadge-badge"
      >
        <button
          color="error"
          data-testid="AIconButton"
          label="[object Object]"
        />
      </span>
    </span>
  </div>
</DocumentFragment>
`;
